# mybc

./: CMakeLists.txt  README.txt
include/: calc.h  global.h  input.h  myint.h  output.h
src/: calc.cpp  input.cpp  main.cpp  myint.cpp  output.cpp  version.cpp
